Fixed navbar alignment
- Navbar now centred
- removed unnecessary account button

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -45,5 +45,6 @@
     font-family: 'Poppins', sans-serif;
     color: #f95700;
     margin-bottom: 1.5rem;
+    text-align: center;
   }
       
